z-index bug

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -68,7 +68,7 @@
 }
 
 .t img:hover {
-    z-index: 20;
+    z-index: 18;
 }
 
 [type="radio"] {
